force-app/main/default/objects/Patient__c/fields/Blood_Urea__c.field-meta.xml
<CustomField>
    <fullName>Blood_Urea__c</fullName>
    <label>Blood Urea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>