force-app/main/default/objects/Patient__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Add_Consultant__c</referenceTo>
    <relationshipLabel>Patient</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <type>Lookup</type>
</CustomField>