force-app/main/default/objects/Patient__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>