force-app/main/default/objects/Patient__c/fields/Other1__c.field-meta.xml
<CustomField>
    <fullName>Other1__c</fullName>
    <label>Other1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>