force-app/main/default/objects/Patient__c/fields/Other2__c.field-meta.xml
<CustomField>
    <fullName>Other2__c</fullName>
    <label>Other2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>