force-app/main/default/objects/Patient__c/fields/Ref_By__c.field-meta.xml
<CustomField>
    <fullName>Ref_By__c</fullName>
    <label>Ref.By</label>
    <referenceTo>Add_Ref__c</referenceTo>
    <relationshipName>New_Patient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>