force-app/main/default/objects/Patient__c/fields/Serum__c.field-meta.xml
<CustomField>
    <fullName>Serum__c</fullName>
    <label>Serum Cholesterol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>