force-app/main/default/objects/Patient__c/fields/Serum_Albumin__c.field-meta.xml
<CustomField>
    <fullName>Serum_Albumin__c</fullName>
    <label>Serum Albumin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>