force-app/main/default/objects/Patient__c/fields/Sr_Creatine__c.field-meta.xml
<CustomField>
    <fullName>Sr_Creatine__c</fullName>
    <label>Sr. Creatine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>