force-app/main/default/objects/Patient__c/fields/Urine_PC__c.field-meta.xml
<CustomField>
    <fullName>Urine_PC__c</fullName>
    <label>Urine PC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>