force-app/main/default/objects/Patient__c/fields/Urine_PH__c.field-meta.xml
<CustomField>
    <fullName>Urine_PH__c</fullName>
    <label>Urine PH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>