force-app/main/default/objects/Patient__c/fields/Urine_Protein__c.field-meta.xml
<CustomField>
    <fullName>Urine_Protein__c</fullName>
    <label>Urine Protein</label>
    <length>50</length>
    <type>Text</type>
</CustomField>