force-app/main/default/objects/Patient__c/fields/Urine_RBC__c.field-meta.xml
<CustomField>
    <fullName>Urine_RBC__c</fullName>
    <label>Urine RBC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>