force-app/main/default/objects/Patient__c/fields/X24_hr__c.field-meta.xml
<CustomField>
    <fullName>X24_hr__c</fullName>
    <label>24hr Urine-Protein/P:C ratio:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>